# visualize_sentence_diff

./: .gitignore  LICENSE  README.md  pyproject.toml
src/visualize_sentence_diff/: __init__.py  visualizer.py
test/: test.ipynb
