[build-system]
requires = ["hatchling", "spacy", "IPython"]
build-backend = "hatchling.build"

[project]
name = "visualize_sentence_diff"
version = "0.0.3"
authors = [
  { name="Ryo Kamoi", email="ryokamoi.jp@gmail.com" },
]
description = "A python library to visualize differences between two sentences."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ryokamoi/visualize_sentence_diff"
"Bug Tracker" = "https://github.com/ryokamoi/visualize_sentence_diff/issues"